Following work done: - Update code-preview tab inactive colors for beatuification. - Fix search bar padding overlap issue on navbar logo in very small screens.

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -59,10 +59,10 @@ a
     background-size 1.2rem
     @apply mr-32 rounded-md h-10 pl-10 bg-gray-100 border-transparent text-lg font-normal
     @media (max-width: 719px)
-      width 13rem
-      @apply m-0 left-0
+      width 12rem
+      @apply m-0
       &:focus
-        width 13rem
+        width 12rem
         @apply m-0
 
 .page-nav
